# deep1

./: Jenkinsfile  LICENSE  README.md  setup.cfg
deep1/dataset/: make_dataset.py
deep1/models/: predict_model.py
docker/: Dockerfile.dev  Dockerfile.tests
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-deep1_start.py2.ipynb
