[metadata]
name = deep1
summary = DEEP as a Service (DEEPaaS) is a REST API to expose a 
	machine learning model through a REST API.
description-file =
    README.md
author = Marcus
author-email = hardt@kit.edu
license = MIT
home-page = http://github.com/marcvs/deep1
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    deep1

[entry_points]

deepaas.model.predict = 
    deep1 = deep1.models.predict_model:predict_model

deepaas.model.train = 
    deep1 = deep1.models.train_model:train_model
